// Plugin-specific config protos for MetricsPlugin.

syntax = "proto3";

package nighthawk.adaptive_load;

import "validate/validate.proto";

// Example plugin-specific config proto, representing connection info for an
// outside source of metrics. Part of an example showing how to create and
// register a MetricsPlugin.
message ExampleMetricsPluginConfig {
  string address = 1;
  string credentials = 2;
}
